// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailResultDateItem should render future date 1`] = `
<div
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      label
    </div>
    <div
      className="map-detail-result__item-value"
    >
      1 december 2029
    </div>
  </section>
</div>
`;

exports[`MapDetailResultDateItem should render label and date 1`] = `
<div
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      label
    </div>
    <div
      className="map-detail-result__item-value"
    >
      21 september 1980
    </div>
  </section>
</div>
`;
